[package]
name = "rdxl_rss"
version = "0.0.1"
authors = ["Andrew <andrew@subarctic.org>"]
license = "MIT OR Apache-2.0"
description = "RSS Template for RDXL"
edition = "2018"
readme = "README.md"
repository = "https://github.com/andrew-johnson-4/rdxl_rss"
keywords = ["rss","feed","templating","library"]

[dependencies]
rdxl = "0.5"
